--- a/v1/backend-ms1/src/main/resources/application-dev.properties
+++ b/v1/backend-ms1/src/main/resources/application-dev.properties
@@ -33,9 +33,10 @@ server.port = 8036
 spring.security.user.password=generated
 
 #minio config
-minio.endpoint=http://localhost:9000
-minio.accessKey=Vh4IZZ6xwTg781Upj1qp
-minio.secretKey=nScFlyHHJGdnosTi5FOsFOyDsVBGJp7TmxNmFp5B
+minio.endpoint=https://play.min.io/
+minio.accessKey=Q3AM3UQ867SPQQA43P2F
+minio.secretKey=zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG
+minio.default.bucket=ged
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
