--- a/v4/frontend/package.json
+++ b/v4/frontend/package.json
@@ -29,6 +29,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-i18next": "^13.0.2",
+        "styled-components": "^6.0.7",
         "typescript": "5.0.4"
     },
     "devDependencies": {
